--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,16 +1,16 @@
 .CodeMirror {
   height: auto;
-  min-height: 300px;
-  border: 1px solid #ddd;
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
+  min-height: 150px;
+  height: auto;
   padding: 10px;
   font: inherit;
   z-index: 1;
+  font-size: 16px;
+  margin: 0 2px;
 }
 
 .CodeMirror-scroll {
-  min-height: 300px;
+  min-height: 150px;
 }
 
 .CodeMirror-fullscreen {
@@ -36,27 +36,8 @@
   -ms-user-select: none;
   -o-user-select: none;
   user-select: none;
-  padding: 0 10px;
-  border-top: 1px solid #bbb;
-  border-left: 1px solid #bbb;
-  border-right: 1px solid #bbb;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-}
-
-.editor-toolbar:after,
-.editor-toolbar:before {
-  display: block;
-  content: ' ';
-  height: 1px;
-}
-
-.editor-toolbar:before {
-  margin-bottom: 8px;
-}
-
-.editor-toolbar:after {
-  margin-top: 8px;
+  margin: 2px;
+  border-bottom: 1px solid #d9d9d9;
 }
 
 .editor-toolbar:hover,
@@ -167,6 +148,18 @@
   padding: 0;
 }
 
+.editor-container {
+  border: 1px solid #e8e8e8;
+  border-radius: 2px;
+}
+
+.editor-container.focus {
+  border-color: #40a9ff;
+  outline: 0;
+  box-shadow: 0 0 0 2px rgba(24, 144, 255, 0.2);
+  border-right-width: 1px !important;
+}
+
 .editor-toolbar a {
   display: inline-block;
   text-align: center;
@@ -174,10 +167,12 @@
   color: #2c3e50 !important;
   width: 30px;
   height: 30px;
-  margin: 0;
+  margin: 0 2px 2px 0;
+  padding-top: 3px;
   border: 1px solid transparent;
   border-radius: 3px;
   cursor: pointer;
+  vertical-align: top;
 }
 
 .editor-toolbar a.active,
@@ -198,6 +193,8 @@
   color: transparent;
   text-indent: -10px;
   margin: 0 6px;
+  vertical-align: top;
+  margin-top: 4px;
 }
 
 .editor-toolbar a.fa-header-x:after {
@@ -246,6 +243,8 @@
   font-size: 12px;
   color: #959694;
   text-align: right;
+  margin: 2px;
+  border-top: 1px solid #d9d9d9;
 }
 
 .editor-statusbar span {
@@ -358,17 +357,28 @@
   line-height: 110%;
 }
 
-.CodeMirror .CodeMirror-code .cm-comment {
+.CodeMirror .CodeMirror-code .cm-comment,
+.CodeMirror .cm-quote,
+.CodeMirror .cm-emoji {
   background: rgba(0, 0, 0, 0.05);
   border-radius: 2px;
+  padding: 0 2px;
 }
 
 .CodeMirror .CodeMirror-code .cm-link {
-  color: #7f8c8d;
+  color: #40a9ff;
 }
 
 .CodeMirror .CodeMirror-code .cm-url {
-  color: #aab2b3;
+  color: #40a9ff;
+}
+
+.CodeMirror .CodeMirror-code .cm-variable-2 {
+  color: #05a;
+}
+
+.cm-s-default .cm-emoji {
+  color: #009688;
 }
 
 .CodeMirror .CodeMirror-code .cm-strikethrough {
