SideBySide scroll sync

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -27,8 +27,10 @@
   padding: 0px 5px 5px 5px;
   font: inherit;
   z-index: 1;
-  font-size: 16px;
   margin: 0 2px;
+  font-size: 16px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
+    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
 
 .editor-container.fullscreen .CodeMirror {
@@ -356,23 +358,42 @@
 }
 
 .CodeMirror .CodeMirror-code .cm-header-1 {
-  font-size: 200%;
-  line-height: 200%;
+  padding-bottom: 0.3em;
+  font-size: 2em;
+  font-weight: 600;
+  line-height: 1.25;
 }
 
 .CodeMirror .CodeMirror-code .cm-header-2 {
-  font-size: 160%;
-  line-height: 160%;
+  padding-bottom: 0.3em;
+  font-size: 1.5em;
+  font-weight: 600;
+  line-height: 1.25;
 }
 
 .CodeMirror .CodeMirror-code .cm-header-3 {
-  font-size: 125%;
-  line-height: 125%;
+  font-size: 1.25em;
+  font-weight: 600;
+  line-height: 1.25;
 }
 
 .CodeMirror .CodeMirror-code .cm-header-4 {
-  font-size: 110%;
-  line-height: 110%;
+  font-size: 1em;
+  font-weight: 600;
+  line-height: 1.25;
+}
+
+.CodeMirror .CodeMirror-code .cm-header-5 {
+  font-size: 0.875em;
+  font-weight: 600;
+  line-height: 1.25;
+}
+
+.CodeMirror .CodeMirror-code .cm-header-6 {
+  font-size: 0.85em;
+  color: #6a737d;
+  font-weight: 600;
+  line-height: 1.25;
 }
 
 .CodeMirror .CodeMirror-code .cm-comment,
