--- a/src/css/editor.css
+++ b/src/css/editor.css
@@ -281,9 +281,7 @@
 
 .editor-preview {
   padding: 10px;
-  position: absolute;
   width: 100%;
-  height: 100%;
   top: 0;
   left: 0;
   background: #fafafa;
@@ -293,12 +291,22 @@
   box-sizing: border-box;
 }
 
+.fullscreen.preview .editor-preview {
+  position: absolute;
+  top: 35px;
+  bottom: 36px;
+}
+
+.preview .CodeMirror-scroll {
+  display: none;
+}
+
 .editor-preview-side {
   padding: 10px;
   position: fixed;
   bottom: 36px;
-  width: 50%;
   top: 35px;
+  width: 50%;
   right: 0;
   background: #fafafa;
   z-index: 9;
@@ -306,7 +314,6 @@
   display: none;
   box-sizing: border-box;
   border: 1px solid #ddd;
-  border-top-width: 0px;
   border-bottom-width: 0px;
   padding-top: 2px;
 }
