--- a/src/css/editor.css
+++ b/src/css/editor.css
@@ -43,6 +43,7 @@
   font-size: 14px;
 }
 .editor-toolbar {
+  min-height: 32px;
   position: relative;
   opacity: 0.6;
   -webkit-user-select: none;
