--- a/src/css/editor.css
+++ b/src/css/editor.css
@@ -289,6 +289,30 @@
   box-sizing: border-box;
 }
 
+div.mermaid {
+  font-family: 'trebuchet ms', verdana, arial;
+  font-size: 14px;
+  overflow-x: auto;
+}
+
+div.mermaid > svg {
+  color: rgb(0, 0, 0);
+  display: inline;
+  font-family: 'trebuchet ms', verdana, arial;
+  font-size: 14px;
+  font-stretch: 100%;
+  font-style: normal;
+  font-variant-caps: normal;
+  font-variant-east-asian: normal;
+  font-variant-ligatures: normal;
+  font-variant-numeric: normal;
+  font-weight: 400;
+  max-height: 500px !important;
+  line-height: normal;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
 .fullscreen.preview .editor-preview {
   position: absolute;
   top: 35px;
